Resources/Parsers/alloy/alloyParser.js
// Generated from C:/Users/megam/jupyter_ops/Resources/Parsers/alloy/alloy.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import alloyListener from './alloyListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class alloyParser extends antlr4.Parser {

    static grammarFileName = "alloy.g4";
    static literalNames = [ null, "'module'", "','", "'open'", "'as'", "'abstract'", 
                            "'sig'", "'{'", "'}'", "'extends'", "'in'", 
                            "'+'", "'lone'", "'some'", "'one'", "'disj'", 
                            "':'", "'fact'", "'pred'", "'.'", "'fun'", "'('", 
                            "')'", "'['", "']'", "'assert'", "'run'", "'check'", 
                            "'for'", "'but'", "'exactly'", "'@'", "'this'", 
                            "'!'", "'not'", "'=>'", "'implies'", "'else'", 
                            "'let'", "'-'", "'none'", "'univ'", "'iden'", 
                            "'no'", "'set'", "'#'", "'~'", "'*'", "'^'", 
                            "'||'", "'or'", "'&&'", "'and'", "'<=>'", "'iff'", 
                            "'&'", "'++'", "'<:'", "':>'", "'->'", "'='", 
                            "'<'", "'>'", "'=<'", "'>='", "'all'", "'sum'", 
                            "'this/'", "'/'", "'|'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, "BAR", "DIGIT", 
                             "IDENTIFIER", "COMMENT", "WS" ];
    static ruleNames = [ "alloyModule", "moduleDecl", "import_", "paragraph", 
                         "sigDecl", "sigExt", "mult", "decl", "factDecl", 
                         "predDecl", "funDecl", "paraDecls", "assertDecl", 
                         "cmdDecl", "scope", "typescope", "expr", "const_", 
                         "unOp", "binOp", "arrowOp", "compareOp", "letDecl", 
                         "block", "blockOrBar", "quant", "qualName", "name", 
                         "number" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = alloyParser.ruleNames;
        this.literalNames = alloyParser.literalNames;
        this.symbolicNames = alloyParser.symbolicNames;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 16:
    	    		return this.expr_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    expr_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 10);
    		case 1:
    			return this.precpred(this._ctx, 9);
    		case 2:
    			return this.precpred(this._ctx, 7);
    		case 3:
    			return this.precpred(this._ctx, 6);
    		case 4:
    			return this.precpred(this._ctx, 8);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	alloyModule() {
	    let localctx = new AlloyModuleContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, alloyParser.RULE_alloyModule);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 59;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===1) {
	            this.state = 58;
	            this.moduleDecl();
	        }

	        this.state = 64;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===3) {
	            this.state = 61;
	            this.import_();
	            this.state = 66;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 68; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 67;
	            this.paragraph();
	            this.state = 70; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while((((_la) & ~0x1f) === 0 && ((1 << _la) & 236351712) !== 0) || _la===67 || _la===71);
	        this.state = 72;
	        this.match(alloyParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	moduleDecl() {
	    let localctx = new ModuleDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, alloyParser.RULE_moduleDecl);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 74;
	        this.match(alloyParser.T__0);
	        this.state = 75;
	        this.qualName();
	        this.state = 76;
	        this.name();
	        this.state = 81;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===2) {
	            this.state = 77;
	            this.match(alloyParser.T__1);
	            this.state = 78;
	            this.name();
	            this.state = 83;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	import_() {
	    let localctx = new Import_Context(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, alloyParser.RULE_import_);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 84;
	        this.match(alloyParser.T__2);
	        this.state = 85;
	        this.qualName();
	        this.state = 90;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===2) {
	            this.state = 86;
	            this.match(alloyParser.T__1);
	            this.state = 87;
	            this.qualName();
	            this.state = 92;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 95;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===4) {
	            this.state = 93;
	            this.match(alloyParser.T__3);
	            this.state = 94;
	            this.name();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	paragraph() {
	    let localctx = new ParagraphContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, alloyParser.RULE_paragraph);
	    try {
	        this.state = 103;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 5:
	        case 6:
	        case 12:
	        case 13:
	        case 14:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 97;
	            this.sigDecl();
	            break;
	        case 17:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 98;
	            this.factDecl();
	            break;
	        case 18:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 99;
	            this.predDecl();
	            break;
	        case 20:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 100;
	            this.funDecl();
	            break;
	        case 25:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 101;
	            this.assertDecl();
	            break;
	        case 7:
	        case 26:
	        case 27:
	        case 67:
	        case 71:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 102;
	            this.cmdDecl();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	sigDecl() {
	    let localctx = new SigDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, alloyParser.RULE_sigDecl);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 106;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===5) {
	            this.state = 105;
	            this.match(alloyParser.T__4);
	        }

	        this.state = 109;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) === 0 && ((1 << _la) & 28672) !== 0)) {
	            this.state = 108;
	            this.mult();
	        }

	        this.state = 111;
	        this.match(alloyParser.T__5);
	        this.state = 112;
	        this.name();
	        this.state = 117;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===2) {
	            this.state = 113;
	            this.match(alloyParser.T__1);
	            this.state = 114;
	            this.name();
	            this.state = 119;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 121;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===9 || _la===10) {
	            this.state = 120;
	            this.sigExt();
	        }

	        this.state = 123;
	        this.match(alloyParser.T__6);
	        this.state = 132;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===15 || _la===71) {
	            this.state = 124;
	            this.decl();
	            this.state = 129;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===2) {
	                this.state = 125;
	                this.match(alloyParser.T__1);
	                this.state = 126;
	                this.decl();
	                this.state = 131;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	        }

	        this.state = 134;
	        this.match(alloyParser.T__7);
	        this.state = 136;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,13,this._ctx);
	        if(la_===1) {
	            this.state = 135;
	            this.block();

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	sigExt() {
	    let localctx = new SigExtContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, alloyParser.RULE_sigExt);
	    var _la = 0;
	    try {
	        this.state = 149;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 9:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 138;
	            this.match(alloyParser.T__8);
	            this.state = 139;
	            this.qualName();
	            break;
	        case 10:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 140;
	            this.match(alloyParser.T__9);
	            this.state = 141;
	            this.qualName();
	            this.state = 146;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===11) {
	                this.state = 142;
	                this.match(alloyParser.T__10);
	                this.state = 143;
	                this.qualName();
	                this.state = 148;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	mult() {
	    let localctx = new MultContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, alloyParser.RULE_mult);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 151;
	        _la = this._input.LA(1);
	        if(!((((_la) & ~0x1f) === 0 && ((1 << _la) & 28672) !== 0))) {
	        this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	decl() {
	    let localctx = new DeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, alloyParser.RULE_decl);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 154;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===15) {
	            this.state = 153;
	            this.match(alloyParser.T__14);
	        }

	        this.state = 156;
	        this.name();
	        this.state = 161;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===2) {
	            this.state = 157;
	            this.match(alloyParser.T__1);
	            this.state = 158;
	            this.name();
	            this.state = 163;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 164;
	        this.match(alloyParser.T__15);
	        this.state = 166;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===15) {
	            this.state = 165;
	            this.match(alloyParser.T__14);
	        }

	        this.state = 168;
	        this.expr(0);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	factDecl() {
	    let localctx = new FactDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, alloyParser.RULE_factDecl);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 170;
	        this.match(alloyParser.T__16);
	        this.state = 172;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===71) {
	            this.state = 171;
	            this.name();
	        }

	        this.state = 174;
	        this.block();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	predDecl() {
	    let localctx = new PredDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, alloyParser.RULE_predDecl);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 176;
	        this.match(alloyParser.T__17);
	        this.state = 180;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,20,this._ctx);
	        if(la_===1) {
	            this.state = 177;
	            this.qualName();
	            this.state = 178;
	            this.match(alloyParser.T__18);

	        }
	        this.state = 182;
	        this.name();
	        this.state = 184;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===21 || _la===23) {
	            this.state = 183;
	            this.paraDecls();
	        }

	        this.state = 186;
	        this.block();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	funDecl() {
	    let localctx = new FunDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, alloyParser.RULE_funDecl);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 188;
	        this.match(alloyParser.T__19);
	        this.state = 192;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,22,this._ctx);
	        if(la_===1) {
	            this.state = 189;
	            this.qualName();
	            this.state = 190;
	            this.match(alloyParser.T__18);

	        }
	        this.state = 194;
	        this.name();
	        this.state = 196;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===21 || _la===23) {
	            this.state = 195;
	            this.paraDecls();
	        }

	        this.state = 198;
	        this.match(alloyParser.T__15);
	        this.state = 199;
	        this.expr(0);
	        this.state = 200;
	        this.match(alloyParser.T__6);
	        this.state = 201;
	        this.expr(0);
	        this.state = 202;
	        this.match(alloyParser.T__7);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	paraDecls() {
	    let localctx = new ParaDeclsContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, alloyParser.RULE_paraDecls);
	    var _la = 0;
	    try {
	        this.state = 226;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 21:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 204;
	            this.match(alloyParser.T__20);
	            this.state = 205;
	            this.decl();
	            this.state = 210;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===2) {
	                this.state = 206;
	                this.match(alloyParser.T__1);
	                this.state = 207;
	                this.decl();
	                this.state = 212;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 213;
	            this.match(alloyParser.T__21);
	            break;
	        case 23:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 215;
	            this.match(alloyParser.T__22);
	            this.state = 216;
	            this.decl();
	            this.state = 221;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===2) {
	                this.state = 217;
	                this.match(alloyParser.T__1);
	                this.state = 218;
	                this.decl();
	                this.state = 223;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 224;
	            this.match(alloyParser.T__23);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	assertDecl() {
	    let localctx = new AssertDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, alloyParser.RULE_assertDecl);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 228;
	        this.match(alloyParser.T__24);
	        this.state = 230;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===71) {
	            this.state = 229;
	            this.name();
	        }

	        this.state = 232;
	        this.block();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	cmdDecl() {
	    let localctx = new CmdDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, alloyParser.RULE_cmdDecl);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 237;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,28,this._ctx);
	        if(la_===1) {
	            this.state = 234;
	            this.name();
	            this.state = 235;
	            this.match(alloyParser.T__15);

	        }
	        this.state = 240;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===26 || _la===27) {
	            this.state = 239;
	            _la = this._input.LA(1);
	            if(!(_la===26 || _la===27)) {
	            this._errHandler.recoverInline(this);
	            }
	            else {
	            	this._errHandler.reportMatch(this);
	                this.consume();
	            }
	        }

	        this.state = 244;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 67:
	        case 71:
	            this.state = 242;
	            this.qualName();
	            break;
	        case 7:
	            this.state = 243;
	            this.block();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this.state = 247;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===28) {
	            this.state = 246;
	            this.scope();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	scope() {
	    let localctx = new ScopeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, alloyParser.RULE_scope);
	    var _la = 0;
	    try {
	        this.state = 271;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,35,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 249;
	            this.match(alloyParser.T__27);
	            this.state = 250;
	            this.number();
	            this.state = 260;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(_la===29) {
	                this.state = 251;
	                this.match(alloyParser.T__28);
	                this.state = 252;
	                this.typescope();
	                this.state = 257;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	                while(_la===2) {
	                    this.state = 253;
	                    this.match(alloyParser.T__1);
	                    this.state = 254;
	                    this.typescope();
	                    this.state = 259;
	                    this._errHandler.sync(this);
	                    _la = this._input.LA(1);
	                }
	            }

	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 262;
	            this.match(alloyParser.T__27);
	            this.state = 263;
	            this.typescope();
	            this.state = 268;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===2) {
	                this.state = 264;
	                this.match(alloyParser.T__1);
	                this.state = 265;
	                this.typescope();
	                this.state = 270;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	typescope() {
	    let localctx = new TypescopeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, alloyParser.RULE_typescope);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 274;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===30) {
	            this.state = 273;
	            this.match(alloyParser.T__29);
	        }

	        this.state = 276;
	        this.number();
	        this.state = 277;
	        this.qualName();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	expr(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new ExprContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 32;
	    this.enterRecursionRule(localctx, 32, alloyParser.RULE_expr, _p);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 327;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,40,this._ctx);
	        switch(la_) {
	        case 1:
	            this.state = 280;
	            this.const_();
	            break;

	        case 2:
	            this.state = 281;
	            this.qualName();
	            break;

	        case 3:
	            this.state = 282;
	            this.match(alloyParser.T__30);
	            this.state = 283;
	            this.name();
	            break;

	        case 4:
	            this.state = 284;
	            this.match(alloyParser.T__31);
	            break;

	        case 5:
	            this.state = 285;
	            this.unOp();
	            this.state = 286;
	            this.expr(11);
	            break;

	        case 6:
	            this.state = 288;
	            this.match(alloyParser.T__37);
	            this.state = 289;
	            this.letDecl();
	            this.state = 294;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===2) {
	                this.state = 290;
	                this.match(alloyParser.T__1);
	                this.state = 291;
	                this.letDecl();
	                this.state = 296;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 297;
	            this.blockOrBar();
	            break;

	        case 7:
	            this.state = 299;
	            this.quant();
	            this.state = 300;
	            this.decl();
	            this.state = 305;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===2) {
	                this.state = 301;
	                this.match(alloyParser.T__1);
	                this.state = 302;
	                this.decl();
	                this.state = 307;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 308;
	            this.blockOrBar();
	            break;

	        case 8:
	            this.state = 310;
	            this.match(alloyParser.T__6);
	            this.state = 311;
	            this.decl();
	            this.state = 316;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===2) {
	                this.state = 312;
	                this.match(alloyParser.T__1);
	                this.state = 313;
	                this.decl();
	                this.state = 318;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 319;
	            this.blockOrBar();
	            this.state = 320;
	            this.match(alloyParser.T__7);
	            break;

	        case 9:
	            this.state = 322;
	            this.match(alloyParser.T__20);
	            this.state = 323;
	            this.expr(0);
	            this.state = 324;
	            this.match(alloyParser.T__21);
	            break;

	        case 10:
	            this.state = 326;
	            this.block();
	            break;

	        }
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 364;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,45,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                this.state = 362;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,44,this._ctx);
	                switch(la_) {
	                case 1:
	                    localctx = new ExprContext(this, _parentctx, _parentState);
	                    this.pushNewRecursionContext(localctx, _startState, alloyParser.RULE_expr);
	                    this.state = 329;
	                    if (!( this.precpred(this._ctx, 10))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 10)");
	                    }
	                    this.state = 330;
	                    this.binOp();
	                    this.state = 331;
	                    this.expr(11);
	                    break;
